[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "detectree"
version = "0.8.1"
description = "Tree detection from aerial imagery in Python."
readme = "README.md"
authors = [
  {name = "Martí Bosch", email = "marti.bosch@epfl.ch"}
]
license = {text = "GPL-3.0"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.10"
dependencies = [
  "dask[delayed,distributed]",
  "huggingface-hub",
  "joblib",
  "laspy[lazrs] >= 2.0.0",
  "lightgbm",
  "numpy >= 1.15",
  "opencv-python >= 4.0.0",
  "pandas >= 0.23",
  "pymaxflow >= 1.0.0",
  "rasterio >= 1.0.0",
  "scikit-image >= 0.25.0",
  "scikit-learn",
  "scipy >= 1.0.0",
  "skops",
  "shapely",
  "tqdm"
]

[project.optional-dependencies]
test = ["coverage[toml]", "pytest", "pytest-cov", "ruff"]
dev = ["build", "commitizen", "pre-commit", "toml", "uv"]
doc = ["pydata-sphinx-theme", "sphinx", "sphinx-click", "sphinx-mdinclude", "sphinxcontrib-bibtex"]

[project.scripts]
detectree = "detectree.cli.main:cli"

[project.urls]
Repository = "https://github.com/martibosch/detectree"

[tool.codespell]
skip = "CHANGELOG.md,pixi.lock,paper/paper.bib"

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
version_files = [
  "detectree/__init__.py",
  "pyproject.toml:version"
]

[tool.coverage.report]
exclude_lines = [
  "if self.debug:",
  "pragma: no cover",
  "raise NotImplementedError",
  "except ModuleNotFoundError",
  "except ImportError"
]
ignore_errors = true
omit = ["tests/*", "docs/conf.py"]

[tool.coverage.run]
source = ["detectree"]

[tool.pixi.dependencies]
gdal = ">=3"
python = ">=3.10,<3.14"

[tool.pixi.environments]
default = {features = ["default"], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}
doc = {features = ["doc"], solve-group = "default"}
test = {features = ["test"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
build = "uv build"

[tool.pixi.feature.doc.tasks]
build-doc = "sphinx-build docs docs/_build"

[tool.pixi.feature.test.tasks]
test = "pytest -s --cov=detectree --cov-report=xml tests"

[tool.pixi.pypi-dependencies]
detectree = {path = ".", editable = true}

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["D", "E", "F", "I", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["detectree"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
"tests/test_detectree.py" = ["D"]
"docs/src/conf.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.build-backend]
module-name = "detectree"
module-root = ""

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
