[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[flake8]
per-file-ignores =
    detectree/__init__.py:F401
    tests/test_detectree.py:F401    

[yapf]
based_on_style = pep8
split_before_named_assigns = false

[isort]
known_first_party = detectree
default_section = THIRDPARTY
forced_separate = test_detectree
