[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[flake8]
exclude = ./build/*
ignore = E203,W503
per-file-ignores =
    detectree/__init__.py:F401
    tests/test_detectree.py:F401

[isort]
known_first_party = detectree
default_section = THIRDPARTY
forced_separate = test_detectree
line_length = 79
profile = black

[pydocstyle]
convention = numpy
